--- a/general.css
+++ b/general.css
@@ -56,22 +56,73 @@ main {
   padding: 0.4rem 3.2rem;
   flex-direction: column;
   gap: 1.6rem;
+  position: relative;
 }
 .header {
   width: 100%;
 }
-.search {
-  padding: 1.4rem 2.4rem;
+
+.search-box {
+  /* margin-top: 1rem;
   width: 100%;
-  font-family: "Roboto";
-  border-radius: 5rem;
-  border: none;
-  font-weight: 300;
-  font-size: 1.4rem;
-  letter-spacing: 1px;
   background-color: #f1f3f5;
+  border-radius: 5rem;
+  padding: 1.4rem 2.4rem; */
+  position: relative;
+  height: 4.8rem;
+  width: 100%;
+  border-radius: 5rem;
 }
-.search:focus {
+
+.search {
+  width: 100%;
+  position: absolute;
+  background-color: #f1f3f5;
+  border: none;
+  border-radius: 5rem;
+  padding: 1.4rem 2.4rem;
+  text-indent: 3rem;
+  font-family: "Roboto";
+  font-weight: 300;
+  font-size: 1.6rem;
+  letter-spacing: 1px;
+}
+
+.search:focus-within {
   outline: 1px solid rgb(111, 143, 216);
   background-color: #fff;
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.1);
+}
+.search-icon {
+  position: absolute;
+  left: 5%;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 99999;
+  font-size: 2.5rem;
+}
+.search-options {
+  width: 90%;
+  height: 10rem;
+  left: 50%;
+  box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.1);
+  top: 5.16rem;
+  z-index: 9999;
+  border-radius: 8px;
+  transform: translateX(-50%);
+  background-color: #fff;
+  position: absolute;
+}
+.search-desc {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  white-space: nowrap;
+  transform: translateX(-50%);
+  font-size: 1.5rem;
+  color: #666;
+  font-weight: 300;
+}
+.hidden {
+  opacity: 0;
 }
