--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
 .nav-link:hover .nav-item {
   background-color: #e9ecef;
 }
-.nav-link:focus span {
+.nav-link:focus span :not(.profile-user) {
   font-weight: 700;
 }
 .nav-link:focus path:nth-child(2),
@@ -122,4 +122,182 @@
   border-radius: 50%;
   font-size: 1.4rem;
   border: 2px solid #fff;
+}
+/* ***************** */
+/* INTEREST */
+/* ***************** */
+.interest-box {
+  background-color: #fff;
+  border-radius: 5px;
+  overflow: hidden;
+  width: 80%;
+  height: 10rem;
+  font-weight: 300;
+  font-size: 1.4rem;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  right: 5%;
+  top: 10%;
+  display: flex;
+  flex-direction: column;
+  animation: myAnim 0.2s ease 0s 1 normal forwards;
+  z-index: 8888;
+}
+.not-interested {
+  padding: 1.2rem;
+  display: flex;
+  align-items: center;
+  height: 50%;
+  background-color: #fff;
+  gap: 0.8rem;
+  cursor: pointer;
+  transition: all 0.2s;
+}
+.not-interested:hover {
+  background-color: rgb(249, 249, 249);
+}
+.not-interested i {
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+@keyframes myAnim {
+  0% {
+    transform: scaleY(0.4);
+    transform-origin: 100% 0%;
+  }
+
+  100% {
+    transform: scaleY(1);
+    transform-origin: 100% 0%;
+  }
+}
+.deletedInterest {
+  font-size: 1.5rem;
+  font-weight: 300;
+  width: 100%;
+  height: 100%;
+  cursor: default;
+}
+/* ***************** */
+/* COOKIES */
+/* ***************** */
+.cookie {
+  position: fixed;
+  bottom: 0;
+  background-color: #161616;
+  color: #fff;
+  z-index: 999;
+  width: 100%;
+  height: 21vh;
+  padding: 3rem 15rem;
+  display: flex;
+  gap: 15rem;
+  justify-content: space-between;
+  align-items: center;
+}
+.cookie-text-box {
+  width: 55%;
+}
+.cookie-heading {
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1.2rem;
+}
+.cookie-desc {
+  font-size: 1.28rem;
+  font-weight: 300;
+  line-height: 1.6rem;
+}
+.cookie-link {
+  color: #fff;
+}
+.cookie-btn-box {
+  display: flex;
+  flex-direction: column;
+  gap: 0.6rem;
+  width: 35%;
+}
+.btn-cookie {
+  padding: 1.2rem 2rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  border-radius: 50px;
+  background-color: #f2f2f2;
+  cursor: pointer;
+  border: none;
+  transition: all 0.2s;
+}
+.btn-cookie:hover {
+  background-color: #ddd;
+}
+
+/* FOLLOW MORE INFO */
+.follow-list li {
+  position: relative;
+}
+
+.follow--more-info {
+  width: 30rem;
+  z-index: 99999;
+  background-color: #fff;
+  position: absolute;
+  left: 1rem;
+  top: 2rem;
+  box-shadow: 3px 4px 15px rgba(0, 0, 0, 0.1);
+  padding: 1.4rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.8rem;
+  cursor: auto;
+  transition: all 0.2s;
+  animation: appear 0.2s;
+}
+.follow--more-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: -1rem;
+}
+
+.follow--more-desc {
+  font-size: 1.6rem;
+  font-weight: 300;
+}
+.follow--more-nums {
+  display: flex;
+  gap: 2.8rem;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+.follow--more-nums a {
+  color: #666;
+}
+.follow--more-nums a:hover {
+  text-decoration: underline 1.4px;
+}
+.follow--more-nums span {
+  font-weight: 700;
+  color: #333;
+  cursor: none;
+}
+.follow--more-img img {
+  width: 6.2rem;
+  height: 6.2rem;
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.btn-follow-help {
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  transform: translateY(-50%);
 }
